# beaglebone-black-yarp

./: .gitmodules  CMakeLists.txt  README.md
conf/: app.xml
conf/athletebot/: athletebot.xml  robotInterface.ini
conf/athletebot/hardware/FT/: left_foot_strain.xml  left_leg_strain.xml
conf/athletebot/wrappers/FT/: left_foot_FT_wrapper.xml  left_leg_FT_wrapper.xml
scripts/: init_all.sh  set_can.sh  set_dialout.sh  yarp_install.sh
src/athleteInterface/: CMakeLists.txt  README.TXT
src/athleteInterface/include/: AthleteBot.h  BeagleBoneInputOutput.h
src/athleteInterface/scripts/: set_bus.sh
src/athleteInterface/src/: AthleteBot.cpp  AthleteBot.h  BeagleBoneInputOutput.cpp
src/libraries/gpio/: CMakeLists.txt  gpio_athlete.cpp  gpio_athlete.h
src/modules/athleteInterface/: CMakeLists.txt  athletebot.ini
src/modules/athleteInterface/include/: AthleteBot.h  BeagleBoneInputOutput.h
src/modules/athleteInterface/scripts/: gpio_sudo_privilege.sh
src/modules/athleteInterface/src/: AthleteBot.cpp  BeagleBoneInputOutput.cpp
utils/: yarp_install.sh
